add simple fault conv for SHERIFS

--- a/OQ012_membuat_source_model_xml_untuk_SHERIFS.ipynb
+++ b/OQ012_membuat_source_model_xml_untuk_SHERIFS.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "59458d28",
    "metadata": {
     "vscode": {
@@ -134,9 +134,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "778adaeb",
+   "metadata": {},
+   "source": [
+    "## \\#\\#\\# Opsional \\#\\#\\#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b86870ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/yudhastyawan/Downloads/single_ruptures/ssm_2/b_0/single_sec_rup_2.xml']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "from openquake.hazardlib.sourcewriter import write_source_model\n",
+    "from openquake.hazardlib.mfd.evenly_discretized import EvenlyDiscretizedMFD\n",
+    "\n",
+    "geod = pyproj.Geod(ellps=\"WGS84\")\n",
+    "\n",
+    "xmlname = '/Users/yudhastyawan/Downloads/single_ruptures/ssm_2/b_0/single_sec_rup.xml'\n",
+    "\n",
+    "tree = ET.parse(xmlname)\n",
+    "root = tree.getroot()\n",
+    "\n",
+    "mtk_simple_faults = []\n",
+    "for i, rt in enumerate(root[0][0]):\n",
+    "#     print(float(rt[0][0][0][0].text.split()[2]))\n",
+    "#     print(float(rt[0][0][0][0].text.split()[5]))\n",
+    "    _,_,dist = geod.inv(float(rt[0][0][0][0].text.split()[0]),\n",
+    "                     float(rt[0][0][0][0].text.split()[1]),\n",
+    "                     float(rt[0][0][0][0].text.split()[3]),\n",
+    "                     float(rt[0][0][0][0].text.split()[4]))\n",
+    "    dip = np.round(np.rad2deg(np.arctan2(float(rt[0][0][0][0].text.split()[5]), dist/1000)))\n",
+    "    geom = [map(float,irt[0][0].text.split()[0:2]) for irt in rt[0]]\n",
+    "    line = LineOQ([PointOQ(x, y) for x, y in geom])\n",
+    "    mtk_simple_faults.append(mtkSimpleFaultSource(\n",
+    "        identifier=rt.attrib['id'], \n",
+    "        name=rt.attrib['name'],\n",
+    "        trt=\"Active Shallow Crust\",\n",
+    "        mag_scale_rel=\"WC1994\", \n",
+    "        rupt_aspect_ratio=1.0, \n",
+    "        mfd= EvenlyDiscretizedMFD(\n",
+    "            float(rt[3].attrib['minMag']), \n",
+    "            float(rt[3].attrib['binWidth']), \n",
+    "            [float(num) for num in root[0][0][i][3][0].text.split()]\n",
+    "        ),\n",
+    "        rake=float(rt[4].text),\n",
+    "    ))\n",
+    "    mtk_simple_faults[i].create_geometry(\n",
+    "        line,\n",
+    "        dip = dip, \n",
+    "        upper_depth = float(rt[0][0][0][0].text.split()[2]), \n",
+    "        lower_depth = float(rt[0][0][0][0].text.split()[5]),\n",
+    "        mesh_spacing=1.0\n",
+    "    )\n",
+    "    \n",
+    "model_simple_faults = mtkSourceModel(\n",
+    "    identifier=\"1001\", \n",
+    "    name=\"Merge Faults 1\", \n",
+    "    sources=mtk_simple_faults\n",
+    ")\n",
+    "\n",
+    "source_model = model_simple_faults.convert_to_oqhazardlib(\n",
+    "    PoissonTOM(1.0), 1.0, 2.0, 10.0,\n",
+    "    use_defaults=False)\n",
+    "write_source_model('/Users/yudhastyawan/Downloads/single_ruptures/ssm_2/b_0/single_sec_rup_2.xml', \n",
+    "                   source_model, \n",
+    "                   name=model_simple_faults.name)\n",
+    "# model_simple_faults.serialise_to_nrml('/Users/yudhastyawan/Downloads/single_ruptures/ssm_2/b_0/single_sec_rup_2.xml', use_defaults=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6206bb32",
+   "id": "35a9a275",
    "metadata": {},
    "outputs": [],
    "source": []
