adding optional works

--- a/OQ006_menghindari_double_counting.ipynb
+++ b/OQ006_menghindari_double_counting.ipynb
@@ -106,6 +106,7 @@
     "\n",
     "catalogue_to_pkl(catalogue_filt, filename=\"filt_dict_catalogue_shallow_background_1.pkl\")\n",
     "\n",
+    "## URUTAN PRIORITAS\n",
     "# megathrust\n",
     "# area fault\n",
     "# shallow background\n",
