--- a/OQ012_membuat_source_model_xml.ipynb
+++ b/OQ012_membuat_source_model_xml.ipynb
@@ -85,6 +85,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79159167",
+   "metadata": {},
+   "source": [
+    "## Informasi mengenai rake\n",
+    "\n",
+    "Rake merupakan sudut yang terbentuk antara arah slip dan strike, besarnya sudut berlawanan dengan arah jarum jam.\n",
+    "\n",
+    "1. Sesar geser arah kanan = 180\n",
+    "2. Sesar geser arah kiri = 0\n",
+    "3. Sesar turun = -90\n",
+    "4. Sesar naik = 90"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f11f5630",
    "metadata": {},
    "source": [
@@ -210,7 +225,7 @@
     ")\n",
     "\n",
     "mtk_simple_faults.append(mtkSimpleFaultSource(\n",
-    "    identifier=\"101\", \n",
+    "    identifier=\"102\", \n",
     "    name=\"Enggano\",\n",
     "    trt=\"Active Shallow Crust\",\n",
     "    mag_scale_rel=\"WC1994\", \n",
@@ -225,6 +240,23 @@
     "    lower_depth = 20.,\n",
     "    mesh_spacing=1.0\n",
     ")\n",
+    "\n",
+    "# mtk_simple_faults.append(mtkSimpleFaultSource(\n",
+    "#     identifier=\"101\", \n",
+    "#     name=\"Enggano\",\n",
+    "#     trt=\"Active Shallow Crust\",\n",
+    "#     mag_scale_rel=\"WC1994\", \n",
+    "#     rupt_aspect_ratio=1.0, \n",
+    "#     mfd=TruncatedGRMFD(6.5, 7.5, 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
+    "#     rake=-90.\n",
+    "# ))\n",
+    "# mtk_simple_faults[1].create_geometry(\n",
+    "#     line_faults[1], # index sesuai dengan urutan dari total patahan\n",
+    "#     dip = 45., \n",
+    "#     upper_depth = 0., \n",
+    "#     lower_depth = 20.,\n",
+    "#     mesh_spacing=1.0\n",
+    "# )\n",
     "\n",
     "mtk_simple_faults.append(mtkSimpleFaultSource(\n",
     "    identifier=\"101\", \n",
@@ -456,7 +488,7 @@
     "    mag_scale_rel=\"WC1994\", \n",
     "    rupt_aspect_ratio=1.0, \n",
     "    mfd=TruncatedGRMFD(4., 7., 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
-    "    rake=-90.\n",
+    "    rake=90.\n",
     "))\n",
     "mtk_megathrusts[0].create_geometry(\n",
     "    complex_megathrust[0], # index sesuai dengan urutan dari total patahan\n",
@@ -470,7 +502,7 @@
     "    mag_scale_rel=\"WC1994\", \n",
     "    rupt_aspect_ratio=1.0, \n",
     "    mfd=TruncatedGRMFD(4., 7., 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
-    "    rake=-90.\n",
+    "    rake=90.\n",
     "))\n",
     "mtk_megathrusts[1].create_geometry(\n",
     "    complex_megathrust[1], # index sesuai dengan urutan dari total patahan\n",
