--- a/OQ013_menjalankan_PSHA.ipynb
+++ b/OQ013_menjalankan_PSHA.ipynb
@@ -34,9 +34,9 @@
     "\n",
     "Ubah beberapa parameter yang terdapat di `job.ini`, `gmpe_logic_tree.xml`, dan `source_model_logic_tree.xml`\n",
     "\n",
-    "Lalu, jalankan openquake dengan cara:\n",
+    "Lalu, jalankan openquake dengan cara membuka Openquake console, `cd` ke direktori kerja, dan jalankan perintah:\n",
     "```\n",
-    "\"C:\\Program Files\\Openquake Engine\\python3.6\\Scripts\\oq\" engine --run job.ini\n",
+    "oq engine --run job.ini\n",
     "```\n",
     "\n",
     "di folder single_ruptures, atau dengan membuka openquake webui dan upload zip file untuk folder single_ruptures"
