--- a/OQ_Opt_001_membuat_source_model_xml_untuk_SHERIFS.ipynb
+++ b/OQ_Opt_001_membuat_source_model_xml_untuk_SHERIFS.ipynb
@@ -80,65 +80,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "a28a3ad2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geojson\n",
-    "import xml.etree.ElementTree as ET\n",
-    "from openquake.hazardlib.mfd.evenly_discretized import EvenlyDiscretizedMFD\n",
-    "\n",
-    "geojsonname = './json_output/json_fault_KumeringNorth_others.geojson'\n",
-    "xmlname = './oqfiles/single_ruptures/ssm_1/b_0/single_sec_rup.xml'\n",
-    "\n",
-    "with open(geojsonname) as f:\n",
-    "    data = geojson.load(f)\n",
-    "    \n",
-    "tree = ET.parse(xmlname)\n",
-    "root = tree.getroot()\n",
-    "    \n",
-    "mtk_simple_faults = []\n",
-    "for i, ft in enumerate(data['features']):\n",
-    "    geom = ft['geometry']['coordinates']\n",
-    "    prop = ft['properties']\n",
-    "    line = LineOQ([PointOQ(x, y) for x, y, _ in geom])\n",
-    "    mtk_simple_faults.append(mtkSimpleFaultSource(\n",
-    "        identifier=f\"{prop['si']}\", \n",
-    "        name=f\"{prop['name']}\",\n",
-    "        trt=\"Active Shallow Crust\",\n",
-    "        mag_scale_rel=\"WC1994\", \n",
-    "        rupt_aspect_ratio=1.0, \n",
-    "        mfd= EvenlyDiscretizedMFD(\n",
-    "            float(root[0][0][i][3].attrib['minMag']), \n",
-    "            float(root[0][0][i][3].attrib['binWidth']), \n",
-    "            [float(num) for num in root[0][0][i][3][0].text.split()]\n",
-    "        ),\n",
-    "        rake=prop['rake'],\n",
-    "    ))\n",
-    "    mtk_simple_faults[i].create_geometry(\n",
-    "        line,\n",
-    "        dip = prop['dip'], \n",
-    "        upper_depth = prop['up_s_d'], \n",
-    "        lower_depth = prop['lo_s_d'],\n",
-    "        mesh_spacing=1.0\n",
-    "    )\n",
-    "    \n",
-    "model_simple_faults = mtkSourceModel(\n",
-    "    identifier=\"1001\", \n",
-    "    name=\"Merge Faults 1\", \n",
-    "    sources=mtk_simple_faults\n",
-    ")\n",
-    "model_simple_faults.serialise_to_nrml('./xmlfiles/merge_faults_1.xml', use_defaults=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "778adaeb",
    "metadata": {},
    "source": [
-    "## \\#\\#\\# Opsional \\#\\#\\#"
+    "## \\#\\#\\# Gunakan ini! \\#\\#\\#"
    ]
   },
   {
@@ -215,6 +161,68 @@
     "                   source_model, \n",
     "                   name=model_simple_faults.name)\n",
     "# model_simple_faults.serialise_to_nrml('/Users/yudhastyawan/Downloads/single_ruptures/ssm_2/b_0/single_sec_rup_2.xml', use_defaults=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ed7feea",
+   "metadata": {},
+   "source": [
+    "## \\#\\#\\# Alternatif (tidak direkomendasikan) \\#\\#\\#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a28a3ad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geojson\n",
+    "import xml.etree.ElementTree as ET\n",
+    "from openquake.hazardlib.mfd.evenly_discretized import EvenlyDiscretizedMFD\n",
+    "\n",
+    "geojsonname = './json_output/json_fault_KumeringNorth_others.geojson'\n",
+    "xmlname = './oqfiles/single_ruptures/ssm_1/b_0/single_sec_rup.xml'\n",
+    "\n",
+    "with open(geojsonname) as f:\n",
+    "    data = geojson.load(f)\n",
+    "    \n",
+    "tree = ET.parse(xmlname)\n",
+    "root = tree.getroot()\n",
+    "    \n",
+    "mtk_simple_faults = []\n",
+    "for i, ft in enumerate(data['features']):\n",
+    "    geom = ft['geometry']['coordinates']\n",
+    "    prop = ft['properties']\n",
+    "    line = LineOQ([PointOQ(x, y) for x, y, _ in geom])\n",
+    "    mtk_simple_faults.append(mtkSimpleFaultSource(\n",
+    "        identifier=f\"{prop['si']}\", \n",
+    "        name=f\"{prop['name']}\",\n",
+    "        trt=\"Active Shallow Crust\",\n",
+    "        mag_scale_rel=\"WC1994\", \n",
+    "        rupt_aspect_ratio=1.0, \n",
+    "        mfd= EvenlyDiscretizedMFD(\n",
+    "            float(root[0][0][i][3].attrib['minMag']), \n",
+    "            float(root[0][0][i][3].attrib['binWidth']), \n",
+    "            [float(num) for num in root[0][0][i][3][0].text.split()]\n",
+    "        ),\n",
+    "        rake=prop['rake'],\n",
+    "    ))\n",
+    "    mtk_simple_faults[i].create_geometry(\n",
+    "        line,\n",
+    "        dip = prop['dip'], \n",
+    "        upper_depth = prop['up_s_d'], \n",
+    "        lower_depth = prop['lo_s_d'],\n",
+    "        mesh_spacing=1.0\n",
+    "    )\n",
+    "    \n",
+    "model_simple_faults = mtkSourceModel(\n",
+    "    identifier=\"1001\", \n",
+    "    name=\"Merge Faults 1\", \n",
+    "    sources=mtk_simple_faults\n",
+    ")\n",
+    "model_simple_faults.serialise_to_nrml('./xmlfiles/merge_faults_1.xml', use_defaults=False)"
    ]
   },
   {
