add some features

--- a/OQ_Opt_002_menggabungkan_hazard_curves_dari_berbagai_sumber.ipynb
+++ b/OQ_Opt_002_menggabungkan_hazard_curves_dari_berbagai_sumber.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "59458d28",
    "metadata": {
     "vscode": {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4dd60e65",
    "metadata": {},
    "outputs": [
@@ -128,11 +128,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "a1d8eaf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAVE HAZARD CURVES\n",
+    "\n",
+    "# header => lon, lat, PGA-1, PGA-2, ...\n",
+    "# items => lon, lat, POE-1, POE-2, ...\n",
+    "with open(\"./npzfiles/hazard_curves.csv\", \"w\") as f:\n",
+    "    f.write(\"lon,lat,\" + \",\".join(list(map(lambda x: f\"{x:.3f}\",pga.tolist()))) + \"\\n\")\n",
+    "    np.savetxt(f, np.concatenate([geoms, poe_sum], axis=1), delimiter=\",\", fmt='%.10f')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "c24b2f73",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SAVE HAZARD MAPS\n",
+    "\n",
     "# ganti/tambah selected_poes dengan nilai poe yang diinginkan\n",
     "selected_poes = [0.1, 0.02]\n",
     "\n",
